--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 stages:
-  - test
+  - scan
 
 # Global variables for Docker-in-Docker
 variables:
@@ -8,7 +8,7 @@ variables:
   DOCKER_DRIVER: overlay2
 
 security-scan:
-  stage: test
+  stage: scan
   image: docker:24.0.5
   services:
     - name: docker:24.0.5-dind
